Inverse method expression can be any valid path expression (#17)